fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-159-30962241b1.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Text() {
  return (
    <Text
      color="#FFF"
      fontFamily="Inter"
      fontSize="12px"
      fontWeight="400"
      letterSpacing="0em"
      lineHeight="normal"
      textAlign="right"
      w="100px"
    >
      Hello World
    </Text>
  )
}"
