fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-161-5b230821f2.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function AutoLayoutBox() {
  return (
    <Flex alignItems="center" bg="#50F" gap="10px" p="10px">
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
      >
        Hello World
      </Text>
      <Box bg="#FFF" borderRadius="1000px" boxSize="12px" overflow="hidden" />
    </Flex>
  )
}"
