fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-162-51e1254b4c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function AutoLayoutBox() {
  return (
    <VStack alignItems="center" bg="#50F" gap="10px" p="10px">
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
      >
        Hello World
      </Text>
      <Box bg="#FFF" borderRadius="1000px" boxSize="12px" overflow="hidden" />
    </VStack>
  )
}"
