fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-163-2a9f9a056a.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function AutoLayoutBox() {
  return (
    <VStack alignItems="center" bg="#50F" gap="6px" p="10px">
      <Text
        color="#FFF"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
      >
        Hello World
      </Text>
      <Box bg="#FFF" h="1px" overflow="hidden" w="100%" />
    </VStack>
  )
}"
