fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-165-501ee1df12.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Component1() {
  return (
    <VStack bg="$background" borderRadius="30px" gap="20px" p="40px">
      <Image boxSize="64px" src="/icons/puzzle-piece.svg" />
      <Text
        color="$text"
        fontFamily="Pretendard"
        fontSize="20px"
        fontWeight="800"
        letterSpacing="-0.04em"
        lineHeight="28px"
        wordBreak="keep-all"
      >
        <Text color="$primary">
          자사 솔루션과의 연계
        </Text>
        를 통해<br />서비스 확장성과 성장 가능성을 높입니다.
      </Text>
      <Text
        color="$text"
        fontFamily="Pretendard"
        fontSize="16px"
        fontWeight="500"
        letterSpacing="-0.06em"
        lineHeight="26px"
        whiteSpace="pre-wrap"
        wordBreak="keep-all"
      >
        웹앱팩토리와 Presskit 등 자체 운영 중인 <br />솔루션과의 연계를 통해 프로젝트의 서비스 범위 확장, <br />운영 효율화, 성장 기회까지 제안드립니다.
      </Text>
    </VStack>
  )
}"
