fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-168-4211bd8279.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Outline,Border() {
  return <Box bg="#FFF" border="solid 3px #FF1C1C" overflow="hidden" />
}"
