fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-169-796132e0cf.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function OutlineBorder() {
  return <Box bg="#FFF" outline="solid 3px #FF1C1C" outlineOffset="-1.5px" overflow="hidden" />
}"
