fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-170-eab2ed7d4c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function OutlineBorder() {
  return <Box bg="#FFF" outline="solid 3px #FF1C1C" overflow="hidden" />
}"
